# template-python

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cicd.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py  utils.py
{{cookiecutter.project_slug}}/: .gitignore  AUTHORS.md  CHANGELOG.md  LICENSE  README.md  makefile  mkdocs.yaml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml  cicd.yaml
{{cookiecutter.project_slug}}/docker/: Dockerfile  makefile  run.sh
{{cookiecutter.project_slug}}/docs/eps/: ep00.md
{{cookiecutter.project_slug}}/docs/include/: ep_header.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.py  __main__.py  cli.py  version.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.module_name}}.py
