[tool.poetry]
name = "cookiecutter-python-poetry"
version = "0.1.0"
description = "Cookiecutter template for a Python package using Poetry."
authors = ["Guiferviz <guiferviz@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/guiferviz/cookiecutter-python-poetry"
keywords = [
    "cookiecutter",
    "poetry",
    "template",
    "package"
]

classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/guiferviz/cookiecutter-python-poetry/issues"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cookies = "^0.6.1"

[build-system]
requires = ["poetry>=1.1.5"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = [
    "tests/"
]
markers = [
    "slow",  # mark test as slow
]
